<resources>
    <string name="app_name">Musical</string>
    <string name="music_name">Music Name</string>
    <string name="album_name">Album name</string>
    <string name="artist_name">Artist name</string>
    <string name="track_name">Track name</string>
    <string name="next">next</string>
    <string name="play">play</string>
    <string name="prev">prev</string>

    <string name="sober">sober</string>
    <string name="closer">closer</string>
    <string name="who_says">who says</string>
    <string name="reset_time">00:00</string>
    <string name="title_local">Local</string>
    <string name="title_browse">Browse</string>
    <string name="path">Path</string>
    <string name="artist">Artist</string>

    <string name="scheme">nikitaverma</string>
    <string name="host">callback</string>
    <string name="progress_bar_hode_log_error">==cannot hide progress bar===</string>
    <string name="browse_all">Browse All</string>
    <string name="network_connection_error">Please check internet connection and restart the app</string>
    <string name="no_result_found">No Result Found</string>
    <string name="no_lyrics_found">No Lyrics Found</string>
    <string name="search_hint">Search Album, Artists, Song</string>
    <string name="now_playing">Now Playing</string>
    <string name="fetching_lyrics">Fetching Lyrics . . .</string>

</resources>
