<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/status_bar_album_art"
        android:layout_width="@dimen/status_bar_album_art"
        android:layout_height="@dimen/status_bar_album_art"
        android:gravity="center"
        android:src="@drawable/ic_library_music_black_24dp"
        />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="@dimen/status_bar_button_info_container_padding_left" >

        <TextView
            android:id="@+id/status_bar_track_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            android:text="@string/track_name"/>

        <TextView
            android:id="@+id/status_bar_artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/artist_name"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/status_bar_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_skip_previous_black_24dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/prev" />

    <ImageButton
        android:id="@+id/status_bar_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_play_arrow_black_24dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/play" />

    <ImageButton
        android:id="@+id/status_bar_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/next"
        android:src="@drawable/ic_skip_next_black_24dp" />

    <ImageButton
        android:id="@+id/status_bar_collapse"
        android:layout_width="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_black_24dp" />

</LinearLayout>